--- a/package.yaml
+++ b/package.yaml
@@ -1,10 +1,10 @@
 name:                raytracer
 version:             0.1.0.0
-github:              "githubuser/raytracer"
+github:              "rafin/raytracer"
 license:             BSD3
-author:              "Author name here"
-maintainer:          "example@example.com"
-copyright:           "2018 Author name here"
+author:              "Ryan Finley"
+maintainer:          "ryanafinley@gmail.com"
+copyright:           "2018 Ryan Finley"
 
 extra-source-files:
 - README.md
@@ -21,6 +21,8 @@ description:         Please see the README on Github at <https://github.com/gith
 
 dependencies:
 - base >= 4.7 && < 5
+- vector
+- hip
 
 library:
   source-dirs: src
@@ -28,21 +30,60 @@ library:
 executables:
   raytracer-exe:
     main:                Main.hs
-    source-dirs:         app
+    source-dirs:
+    - app
+    - src
     ghc-options:
     - -threaded
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
+    - vector
+    - hip
     - raytracer
 
 tests:
-  raytracer-test:
-    main:                Spec.hs
-    source-dirs:         test
+  vec3-test:
+    main:                vec3Spec.hs
+    source-dirs:
+    - test
+    - src
     ghc-options:
     - -threaded
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
+    - tasty
+    - tasty-hunit
+    - vector
+    - raytracer
+
+  raytracer-test:
+    main:                raytracerSpec.hs
+    source-dirs:
+    - test
+    - src
+    ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
+    dependencies:
+    - tasty
+    - tasty-hunit
+    - vector
+    - raytracer
+
+  renderer-test:
+    main:                rendererSpec.hs
+    source-dirs:
+    - test
+    - src
+    ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
+    dependencies:
+    - tasty
+    - tasty-hunit
+    - hip
     - raytracer
