--- a/stack.yaml
+++ b/stack.yaml
@@ -39,7 +39,7 @@ packages:
 - .
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
-extra-deps: [vector-0.12.0.1, hip-1.5.3.0]
+# extra-deps: [vector-0.12.0.1, hip-1.5.3.0]
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
